--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "wcli",
-  "version": "1.2.4",
+  "name": "wys_cli",
+  "version": "1.3.0",
   "description": "前端项目快速搭建手脚架",
   "main": "index.js",
   "bin": "index.js",
@@ -13,14 +13,12 @@
     "log-symbols": "^3.0.0",
     "ora": "^3.4.0"
   },
-  "devDependencies": {},
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
   "keywords": [
     "vue",
-    "vue+elementUI",
-    "quicker_cli"
+    "vue cli",
+    "react",
+    "react cli",
+    "wcli"
   ],
   "author": "wyswill",
   "license": "MIT"
