🐞fix: 依赖升级、npm移除

--- a/package.json
+++ b/package.json
@@ -15,10 +15,9 @@
   },
   "keywords": [
     "vue",
-    "vue cli",
+    "vue admin",
     "react",
-    "react cli",
-    "wcli"
+    "react admin"
   ],
   "author": "wyswill",
   "license": "MIT"
