--- a/package.json
+++ b/package.json
@@ -1,24 +1,29 @@
 {
-  "name": "wys_cli",
-  "version": "1.3.0",
-  "description": "前端项目快速搭建手脚架",
-  "main": "index.js",
-  "bin": "index.js",
-  "dependencies": {
-    "chalk": "^2.4.2",
-    "commander": "^2.20.0",
-    "download-git-repo": "^2.0.0",
-    "handlebars": "^4.1.2",
-    "inquirer": "^6.5.0",
-    "log-symbols": "^3.0.0",
-    "ora": "^3.4.0"
+  "name"        :"wys_cli",
+  "version"     :"1.3.0",
+  "description" :"前端项目快速搭建手脚架",
+  "main"        :"index.js",
+  "bin"         :"index.js",
+  "scripts"     :{
+    "dev"    :"node index.js",
+    "devLink"   :"yarn link wys_cli",
+    "publish":"npm publish"
   },
-  "keywords": [
+  "dependencies":{
+    "chalk"            :"^2.4.2",
+    "commander"        :"^2.20.0",
+    "download-git-repo":"^2.0.0",
+    "handlebars"       :"^4.1.2",
+    "inquirer"         :"^6.5.0",
+    "log-symbols"      :"^3.0.0",
+    "ora"              :"^3.4.0"
+  },
+  "keywords"    :[
     "vue",
     "vue admin",
     "react",
     "react admin"
   ],
-  "author": "wyswill",
-  "license": "MIT"
+  "author"      :"wyswill",
+  "license"     :"MIT"
 }
