--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main"        :"index.js",
   "bin"         :"index.js",
   "scripts"     :{
-    "dev"    :"node index.js",
+    "dev"    :"node index.js init-server asdf",
     "devLink"   :"yarn link wys_cli",
     "publish":"npm publish"
   },
