--- a/package.json
+++ b/package.json
@@ -1,29 +1,32 @@
 {
-  "name"        :"wys_cli",
-  "version"     :"1.3.0",
-  "description" :"前端项目快速搭建手脚架",
-  "main"        :"index.js",
-  "bin"         :"index.js",
-  "scripts"     :{
-    "dev"    :"node index.js",
-    "devLink"   :"yarn link wys_cli",
-    "publish":"npm publish"
+  "name": "wys_cli",
+  "version": "2.0.0",
+  "description": "前端项目快速搭建手脚架",
+  "main": "index.js",
+  "bin": "index.js",
+  "scripts": {
+    "dev": "node index.js",
+    "devLink": "yarn link wys_cli",
+    "publish": "npm publish"
   },
-  "dependencies":{
-    "chalk"            :"^2.4.2",
-    "commander"        :"^2.20.0",
-    "download-git-repo":"^2.0.0",
-    "handlebars"       :"^4.1.2",
-    "inquirer"         :"^6.5.0",
-    "log-symbols"      :"^3.0.0",
-    "ora"              :"^3.4.0"
+  "dependencies": {
+    "chalk": "^2.4.2",
+    "commander": "^2.20.0",
+    "download-git-repo": "^2.0.0",
+    "handlebars": "^4.1.2",
+    "inquirer": "^6.5.0",
+    "log-symbols": "^3.0.0",
+    "ora": "^3.4.0"
   },
-  "keywords"    :[
+  "keywords": [
     "vue",
     "vue admin",
     "react",
     "react admin"
   ],
-  "author"      :"wyswill",
-  "license"     :"MIT"
+  "author": "wyswill",
+  "license": "MIT",
+  "devDependencies": {
+    "@types/node": "^14.14.25"
+  }
 }
