--- a/package.json
+++ b/package.json
@@ -18,6 +18,14 @@
     "log-symbols": "^3.0.0",
     "ora": "^3.4.0"
   },
+  "devDependencies": {
+    "@types/chalk": "^2.2.0",
+    "@types/commander": "^2.12.2",
+    "@types/commander-remaining-args": "^1.2.1",
+    "@types/inquirer": "^6.5.0",
+    "@types/log-symbols": "^3.0.0",
+    "@types/node": "^14.14.25"
+  },
   "keywords": [
     "vue",
     "vue admin",
@@ -25,8 +33,5 @@
     "react admin"
   ],
   "author": "wyswill",
-  "license": "MIT",
-  "devDependencies": {
-    "@types/node": "^14.14.25"
-  }
+  "license": "MIT"
 }
