--- a/package.json
+++ b/package.json
@@ -1,13 +1,14 @@
 {
   "name": "wys_cli",
-  "version": "2.0.1",
-  "description": "前端项目快速搭建手脚架",
-  "main": "dist/index.js",
-  "bin": "dist/index.js",
+  "version": "2.0.7",
+  "description": "项目快速搭建手脚架",
+  "main": "dist/src/index.js",
+  "bin": {
+    "wys_cli": "dist/src/index.js"
+  },
   "scripts": {
     "dev": "ts-node ./src/index.ts",
-    "devLink": "yarn link wys_cli",
-    "publish": "npm publish"
+    "devLink": "yarn link wys_cli"
   },
   "dependencies": {
     "chalk": "^2.4.2",
